samples/_failures_safe/1761373714_2f6901_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_97b82d1d.c: In function ‘main’:
./samples/SAFE/__tmp_97b82d1d.c:167:9: error: expected declaration or statement at end of input
  167 |         printf("Compression test completed.\n");
      |         ^~~~~~
./samples/SAFE/__tmp_97b82d1d.c:167:9: error: expected declaration or statement at end of input
